[package]
name = "siegesaver"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
notify = "6.1"
notify-debouncer-full = "0.3"
chrono = "0.4"
rfd = "0.15"
auto-launch = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
tray-icon = "0.19"
fs_extra = "1.3"

[build-dependencies]
winres = "0.1"
